# Gui_NewsApi_Rust

./: Cargo.toml  README.md  start_web.sh
headlines/: Cargo.toml
headlines/src/: headlines.rs  lib.rs  main.rs
newsApi/: Cargo.toml
newsApi/src/: lib.rs
webapp/: headlines.js  headlines_bg.wasm  index.html
