[package]
name = "headlines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.14.0"
confy = "0.4.0"
serde = {version = "1.0.130",features = ["derive"]} 
tracing = "0.1.29"
tracing-subscriber = "0.2.25"
newsApi = {path="../newsApi"}