[package]
name = "headlines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.17.0"
confy = "0.4.0"
serde = { version = "1.0.144", features = ["derive"] } 
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
newsApi = {path="../newsApi"}

[lib]
crate-type = ["cdylib","rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2.1"
gloo-timers = "0.2.4"
wasm-bindgen-futures = "0.4.33"
