[package]
name = "newsApi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ['derive'] }
serde_json = "1.0.85"
ureq = { version = "2.5.0", features = ["json"] }
thiserror = "1.0.35"
url = "2.3.1"
reqwest = { version = "0.11.11", features = ["json"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwasm = "0.5.0"

[features]
async = [
    "reqwest"
]
